# lhasa

./: .gitignore  .lvimrc  .travis.yml  CNAME  COPYING  Makefile.am  Makefile.amiga  NEWS  NEWS.md  README  README.md  TODO  autogen.sh  configure.ac  gencov  index.html  rpm.spec.in
lib/: Makefile.am  bit_stream_reader.c  bit_stream_writer.c  crc16.c  crc16.h  endian.c  endian.h  ext_common.c  ext_header.c  ext_header.h  ext_unix.c  ext_win.c  gencov  header_defs.h  lh1_common.c  lh1_common.h  lh1_decoder.c  lh1_decoder.h  lh1_encoder.c  lh5_decoder.c  lh5_decoder.h  lh6_decoder.c  lh6_decoder.h  lh7_decoder.c  lh7_decoder.h  lh_new_decoder.c  lha_arch.h  lha_arch_amiga.c  lha_arch_unix.c  lha_arch_win32.c  lha_basic_reader.c  lha_basic_reader.h  lha_codec.h  lha_decoder.c  lha_decoder.h  lha_encoder.c  lha_encoder.h  lha_endian.c  lha_endian.h  lha_file_header.c  (+31 more)
lib/public/: Makefile.am  lha_codec.h  lha_decoder.h  lha_file_header.h  lha_input_stream.h  lha_output_stream.h  lha_reader.h  lha_writer.h  lhasa.h
src/: Makefile.am  args.txt  extract.c  extract.h  filter.c  lha.c  list.c  list.h  main.c  safe.c  safe.h  write_test.c
test/: .gitignore  Makefile.am  build-arch.c  crc32.c  crc32.h  decompress-crc.c  dump-headers.c  fuzzer.c  ghost-tester.c  larc_lz4.lzs  string-replace.c  test-basic-reader.c  test-crc-output  test-crc16.c  test-decoder.c  test-decompress  test-decompress.c  test-dry-run  test-extract  test-extract-mac  test-extract-misc1  test-extract-misc2  test-extract-msdos  test-extract-os2  test-extract-regression  test-extract-unix  test-extract-windows  test-file-headers  test-larc.c  test-lharc.c  test-list-output  test-print  test-search-buffer.c  test_common.sh  test_extract.sh
test/archives/: README.md
test/archives/larc333/: README  lz5.lzs  sfx.com  subdir.lzs
test/archives/lh2_222/: README  eas.lzh  easubdir.lzh  lh0.lzh  lh5.lzh  readonly.lzh  subdir.lzh
test/archives/lha213/: README  lh0.lzh  lh5.lzh  subdir.lzh
test/archives/lha255e/: README  lh0.lzh  lh5.lzh  subdir.lzh
test/archives/lha_amiga_122/: README
test/archives/lha_amiga_212/: README
test/archives/lha_os2_208/: README  example.lzh
test/archives/lha_unix114i/: README  lh0.lzh  lh5.lzh  lh6.lzh  lh7.lzh  subdir.lzh
test/archives/lharc113/: README  lh0.lzh  lh1.lzh  sfx.com  subdir.lzh
test/archives/lhmelt_16536/: README
test/archives/maclha_224/: README  l1_full_subdir.lzh  l2_full_subdir.lzh  l2_subdir.lzh  lh5.lzh  nm_lh0.lzh  nm_subdir.lzh  subdir.lzh
test/archives/morphos_lha_2717/: README.md  h0_lh0.lzh  h0_lh1.lzh  h0_lh5.lzh  h0_lh6.lzh  h0_metadata.lzh  h0_subdir.lzh  h1_lh0.lzh  h1_lh1.lzh  h1_lh5.lzh  h1_lh6.lzh  h1_metadata.lzh  h1_subdir.lzh  h2_huge.lzh  h2_lh0.lzh  h2_lh1.lzh  h2_lh5.lzh  h2_lh6.lzh  h2_metadata.lzh  h2_subdir.lzh
test/archives/pmarc2/: README
test/archives/regression/: README
test/archives/tascal_lha_051h/: README  abspath.lzh  lh0.lzh  lh5.lzh
test/archives/unlha32/: README  lh2.lzh  lh3.lzh
test/compressed/: lz5-to-lzs
test/output/explzh_723/: declha_sfx_ansi.exe-vv.txt  h0_lh0.lzh-l.txt  h0_lh0.lzh-vv.txt  h0_lh5.lzh-l.txt  h0_lh5.lzh-v.txt  h0_lh5.lzh-vv.txt  h0_lh6.lzh-l.txt  h0_lh6.lzh-lv.txt  h0_lh6.lzh-v.txt  h0_lh6.lzh-vv.txt  h0_lh7.lzh-v.txt  h0_lh7.lzh-vv.txt  h0_subdir.lzh-l.txt  h0_subdir.lzh-lv.txt  h0_subdir.lzh-v.txt  h0_subdir.lzh-vv.txt  h1_lh5.lzh-v.txt  h1_lh6.lzh-lv.txt  h1_lh6.lzh-vv.txt  h1_lh7.lzh-l.txt  h1_lh7.lzh-v.txt  h1_lh7.lzh-vv.txt  h1_subdir.lzh-l.txt  h1_subdir.lzh-lv.txt  h1_subdir.lzh-v.txt  h1_subdir.lzh-vv.txt  h2_lh0.lzh-lv.txt  h2_lh0.lzh-v.txt  h2_lh0.lzh-vv.txt  h2_lh5.lzh-vv.txt  h2_lh6.lzh-v.txt  h2_lh6.lzh-vv.txt  h2_lh7.lzh-lv.txt  h2_lh7.lzh-vv.txt  h2_subdir.lzh-l.txt  h2_subdir.lzh-lv.txt  h2_subdir.lzh-v.txt  h2_subdir.lzh-vv.txt
test/output/larc333/: long.lzs-l.txt  long.lzs-lv.txt  long.lzs-v.txt  long.lzs-vv.txt  lz4.lzs-l.txt  lz4.lzs-lv.txt  lz4.lzs-v.txt  lz4.lzs-vv.txt  lz5.lzs-l.txt  lz5.lzs-lv.txt  lz5.lzs-v.txt  lz5.lzs-vv.txt  sfx.com-v.txt  subdir.lzs-l.txt  subdir.lzs-lv.txt  subdir.lzs-v.txt  subdir.lzs-vv.txt
test/output/lh2_222/: eas.lzh-hdr.txt  eas.lzh-l.txt  eas.lzh-lv.txt  eas.lzh-t.txt  eas.lzh-v.txt  eas.lzh-vv.txt  easubdir.lzh-hdr.txt  easubdir.lzh-l.txt  easubdir.lzh-lv.txt  easubdir.lzh-t.txt  easubdir.lzh-v.txt  easubdir.lzh-vv.txt  lh0.lzh-v.txt  lh0.lzh-vv.txt  lh5.lzh-hdr.txt  lh5.lzh-l.txt  lh5.lzh-lv.txt  lh5.lzh-v.txt  lh5.lzh-vv.txt  readonly.lzh-e.txt  readonly.lzh-ew.txt  readonly.lzh-hdr.txt  readonly.lzh-l.txt  readonly.lzh-lv.txt  readonly.lzh-t.txt  readonly.lzh-v.txt  readonly.lzh-vv.txt  sfx.exe-hdr.txt  sfx.exe-l.txt  sfx.exe-lv.txt  subdir.lzh-e.txt  subdir.lzh-ew.txt  subdir.lzh-hdr.txt  subdir.lzh-l.txt  subdir.lzh-lv.txt  subdir.lzh-t.txt  subdir.lzh-v.txt  subdir.lzh-vv.txt
test/output/lha213/: lh0.lzh-l.txt  lh0.lzh-lv.txt  lh0.lzh-v.txt  lh0.lzh-vv.txt  lh5.lzh-l.txt  lh5.lzh-v.txt  lh5.lzh-vv.txt  lh5_long.lzh-l.txt  lh5_long.lzh-lv.txt  lh5_long.lzh-v.txt  lh5_long.lzh-vv.txt  sfx.exe-l.txt  sfx.exe-lv.txt  sfx.exe-v.txt  sfx.exe-vv.txt  subdir.lzh-l.txt  subdir.lzh-v.txt  subdir.lzh-vv.txt
test/output/lha255e/: lh0.lzh-l.txt  lh0.lzh-v.txt  lh0.lzh-vv.txt  lh5.lzh-l.txt  lh5.lzh-v.txt  lh5.lzh-vv.txt  sfx.exe-l.txt  sfx.exe-lv.txt  sfx.exe-v.txt  sfx.exe-vv.txt  subdir.lzh-l.txt  subdir.lzh-lv.txt  subdir.lzh-v.txt
test/output/lha_amiga_122/: level0.lzh-l.txt  level0.lzh-lv.txt  level0.lzh-vv.txt  level1.lzh-l.txt  level1.lzh-lv.txt  level2.lzh-v.txt  level2.lzh-vv.txt  lh0.lzh-l.txt  lh0.lzh-lv.txt  lh0.lzh-v.txt  lh0.lzh-vv.txt  lh0_dirs_bug.lzh-l.txt  lh0_dirs_bug.lzh-lv.txt  lh0_dirs_bug.lzh-v.txt  lh0_dirs_bug.lzh-vv.txt  lh1.lzh-lv.txt  lh1.lzh-v.txt  lh1.lzh-vv.txt  lh4.lzh-l.txt  lh4.lzh-lv.txt  lh4.lzh-vv.txt  lh4_long.lzh-l.txt  lh4_long.lzh-lv.txt  lh4_long.lzh-v.txt  lh4_long.lzh-vv.txt  lh5.lzh-l.txt  lh5.lzh-lv.txt  lh5.lzh-v.txt  lh5.lzh-vv.txt  sfx.run-lv.txt  sfx.run-v.txt  subdir.lzh-v.txt  subdir.lzh-vv.txt
test/output/lha_amiga_212/: level1.lzh-l.txt  level1.lzh-lv.txt  level1.lzh-v.txt  (+10 more)
(+558 files in other folders)
